lab_8/sleepy.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sleepybox1
  labels:
    name: sleepybox1
spec:
  containers:
  - name: sleepybox
    image: busybox
    command: ["/bin/sh", "-c", "sleep 3600"]

---

apiVersion: v1
kind: Pod
metadata:
  name: sleepybox2
  labels:
    name: sleepybox2
spec:
  containers:
  - name: sleepybox
    image: busybox
    command: ["/bin/sh", "-c", "sleep 3600"]
